# PWSpy

./: .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  ImCubeClass.py  MANIFEST.in  README.md  ReflectanceHelper.py  SiliconProps.csv  __init__.py  bitbucket-pipelines.yml  codemeta.json  flatFieldVisualizer.py  io.py  micromanagerPositions.py  paper.bib  paper.md  pwsAnalysis.py  pyproject.toml  reflectanceHelper.py  setup.py  utility.py  version.py
buildScripts/: build.py  devEnv.yml  install Mac.sh
conda.recipe/: bld.bat  build.sh  menu-windows.json  meta.yaml
docs/: building.md  customDocandMakeHTML.bat  readme.txt  requirements.txt
examples/: ROItoMirror.py  ROItoReference.py  __init__.py  compileResults.py  limitedOPDSigma.py  opdExampleScript.py  positionTransformation.py  pwsAnalysis.py  roiUsageExample.py  runPWSAnalysis.py  subtractionNormalization.py  syntheticMirror.py  syntheticReference.py
imCube/: ICBaseClass.py  ImCubeClass.py  KCubeClass.py  otherClasses.py
installScripts/: Run Analysis Mac.sh  Run Analysis.bat  build.py  install Windows.bat  install.bat  readme.txt
paper/: paper.bib  paper.md
pwspython/: __init__.py
refractiveIndexFiles/: CargilleOil1_4.csv  Cargille_cauchy_equations.xls  Ciddor.csv  Daimon-21.5C.csv  N-BK7.csv  Silicon.csv
tests/: HDFSaveLoad.py  conftest.py  datasetDefinitions.py  memoryOrder.py  readme.txt  test1.py  test_analysis.py  test_rois.py  test_utility.py  thinFilmAnalysis.py  thinfilmmatch.py  tiffLoad.py
utility/: PlotNd.py  __init__.py  reflectanceHelper.py  reflection.py  utility.py
(+517 files in other folders)
